# nm-o-tool

./: .gitignore  .gitmodules  2.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  mem_test  test.c  validator
memory/: loadder_globals.c  test.c
memory/inc/: error.h  globals.h  memory.h  vm.h
memory/src/: error.c  get_local_endian.c  in.c
memory/src/memory_map/: cast_memory.c  cast_struct.c  map_from_file.c  memory_map_clear.c  memory_unmap.c  read_in_memory.c  read_struct_in_memory.c  valid_memory_cursor.c
memory/src/vm_map/: vm_map_new_entry.c  vm_map_recut_entry.c
nm/: .items  CMakeLists.txt  Makefile
nm/inc/: nm.h
nm/src/: main.c  mem_access.c  nm.c  nm_type_char.c  swap.c
nm_bin/: .srcs  CMakeLists.txt  Makefile
nm_bin/src/: main.c  mem_validate_null_string.c  nm.c  validator_macho.c
unit_test/: unit_test_validator.sh
validator/: .srcs  CMakeLists.txt  Makefile  test1.txt  test2.txt  validator
validator/.dep/src/: archive.Td  fat.Td  load_commands.Td  load_file.Td  macho.Td  main.Td  validator.Td
validator/inc/: mach_o_validator.h  memory.h  validator.h
validator/src/: archive.c  fat.c  load_commands.c  load_file.c  macho.c  main.c  validator.c
validator/src/elf/: header.c
validator/src/mach_o/: macho_error.c  macho_validator.c  validate_commands.c  validate_head.c  validate_magic.c
validator/src/mach_o/vlc/: vlc_segment_32.c  vlc_segment_64.c
validator/src/memory/: claim_map.c  error.c  in.c  map_from_file.c  read_in_memory.c  read_struct_in_memory.c  unclaim_map.c  valid_memory_cursor.c
validator/src/memory/memory_map/: claim_map.c  read_in_memory.c  unclaim_map.c  valid_memory_cursor.c
validator/src/memory/vm_map/: vm_map_new_entry.c  vm_map_recut_entry.c
validator_bin/: validator
validator_bin/inc/: elf_validator.h  mach_o_validator.h  memory.h
validator_bin/src/elf/: header.c
validator_bin/src/mach_o/: macho_validator.c  validate_commands.c
validator_bin/src/mach_o/vlc/: vlc_segment_64.c  vlc_symtab.c
validator_bin/src/memory/: error.c
validator_bin/src/memory/memory_map/: claim_map.c  map_from_file.c  memory_map_clear.c  memory_unmap.c  read_struct_in_memory.c  valid_memory_cursor.c
