cmake_minimum_required(VERSION 3.12)
project(mem_test.a)
set(CMAKE_CXX_STANDARD 14)
include_directories(inc memory/inc /usr/local/include /usr/lib/llvm-3.8/bin/../lib/clang/3.8.0/include /usr/include/x86_64-linux-gnu /usr/include)
add_library(mem_test.a memory/test.c memory/src/error.c memory/src/get_local_endian.c memory/src/in.c memory/src/memory_map/cast_memory.c memory/src/memory_map/cast_struct.c memory/src/memory_map/map_from_file.c memory/src/memory_map/memory_map_clear.c memory/src/memory_map/memory_unmap.c memory/src/memory_map/read_in_memory.c memory/src/memory_map/read_struct_in_memory.c memory/src/memory_map/valid_memory_cursor.c memory/src/vm_map/vm_map_new_entry.c memory/src/vm_map/vm_map_recut_entry.c)
