cmake_minimum_required(VERSION 3.12)
project(validator)
set(CMAKE_CXX_STANDARD 14)
include_directories(inc /Users/hmartzol/.brew/include)
add_library(validator   src/elf/header.c src/mach_o/macho_validator.c inc/memory.h src/memory/read_in_memory.c src/memory/valid_memory_cursor.c src/memory/error.c src/memory/read_struct_in_memory.c)
