cmake_minimum_required(VERSION 3.12)
project(validator)
set(CMAKE_CXX_STANDARD 14)
include_directories(inc /Users/hmartzol/.brew/include /usr/local/include /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/10.0.1/include /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include)
add_library(validator   src/elf/header.c src/mach_o/macho_error.c src/mach_o/macho_validator.c src/mach_o/validate_commands.c src/mach_o/validate_head.c src/mach_o/validate_magic.c src/mach_o/vlc/vlc_segment_64.c src/memory/error.c src/memory/in.c src/memory/memory_map/claim_map.c src/memory/memory_map/map_from_file.c src/memory/memory_map/read_in_memory.c src/memory/memory_map/read_struct_in_memory.c src/memory/memory_map/unclaim_map.c src/memory/memory_map/valid_memory_cursor.c src/memory/vm_map/vm_map_new_entry.c src/memory/vm_map/vm_map_recut_entry.c)
